frontend/test/should_pass/basic_040.grg
test t {
  negative {
    x:Node;
  }
  negative {
    x:Node;
  }
}
