frontend/test/should_fail/basic_016.grg
test t(x:Node) {
  x:Node;
}
